background overlaps fix

--- a/style.css
+++ b/style.css
@@ -96,5 +96,5 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    /* filter: hue-rotate(180deg); */
+    filter: hue-rotate(180deg);
 }
